--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,12 @@ latest:
   stage: test
   script:
     - SHELL=/bin/bash cargo test
+
+sync:
+  image: ubuntu:18.04
+  stage: deploy
+  script:
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+    - eval $(ssh-agent -s)
+    - echo "$SSH_DEPLOY_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - ssh-add -l
