--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ sync:
   image: ubuntu:18.04
   stage: deploy
   script:
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+    - 'apt-get update -y && apt-get install openssh-client git -y'
     - eval $(ssh-agent -s)
     - echo "$SSH_DEPLOY_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - ssh-add -l
