Looks lite the commit returns non-zero w/o these.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,8 @@ sync:
     - git remote add github git@github.com:nsg/outline-mirror.git
     - echo "# This is a mirror" > README.md
     - echo "This is a mirror of https://gitlab.com/nsgb/outline" >> README.md
+    - git config --global user.email "nsgb-ci@gitlab.local"
+    - git config --global user.name "GitLab CI"
     - git add README.md && git commit -m "Overwrite README with mirror info"
     - git push -u github master
   only:
